Fixing some button spacing

--- a/src/embed/embed.less
+++ b/src/embed/embed.less
@@ -247,6 +247,15 @@ body {
 	z-index:0;
 }
 
+#soundContexts button {
+  // all of the individual mute buttons for vo, music, and sfx
+  margin-bottom: 0.5em;
+}
+
+#soundContexts button:last-child {
+  margin-bottom: 0;
+}
+
 .volume-slider {
 	margin: 1rem 0;
 
